--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "server",
+  "name": "node-npmserver",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
